[package]
name = "compiletest-ui_test-header-migration"
version = "0.1.0"
edition = "2021"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.0", features = ["derive"] }
confique = { version = "0.2.5", features = ["toml"], default-features = false }
indicatif = "0.17.7"
serde = "1.0.196"
tempfile = "3.10.0"
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter", "std", "registry"] }
walkdir = "2.4.0"
